# executorch-qwen2.5-1.5B

./: README.md  convert.sh  export.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
