[project]
name = "executorch-qwen2-5-1-5b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "executorch",
    "executorchcoreml",
    "torch == 2.7.0.dev20250311; sys_platform == 'darwin' and platform_machine == 'aarch64'",
    "loguru",
    "torchtune",
    "torchao",
    "setuptools",
]


[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
executorchcoreml = { url = "https://github.com/kadu-v/prebuilt-executorch/releases/download/0.6.0a0%2Bce7aedf9-wheel/executorchcoreml-0.0.1-cp311-cp311-macosx_10_14_universal2.whl" }
executorch = { url = "https://github.com/kadu-v/prebuilt-executorch/releases/download/0.6.0a0%2Bce7aedf9-wheel/executorch-0.6.0a0+a828307-cp311-cp311-macosx_11_0_universal2.whl" }


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true
